syntax = "proto3";

package relation.sdk.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/ryanreadbooks/whimer/relation/sdk/v1";

message FollowUserRequest {
  uint64 follower = 1 [ (buf.validate.field).uint64.gt = 0 ]; // 关注者
  uint64 followee = 2 [ (buf.validate.field).uint64.gt = 0 ]; // 被关注者
  enum Action {
    ACTION_UNSPECIFIED = 0;
    ACTION_FOLLOW = 1;   // follower发起关注followee
    ACTION_UNFOLLOW = 2; // follower取消对followee的关注
  }
}

message FollowUserResponse {}

enum ActionPolicy {
  ACTION_POLICY_UNSPECIFIED = 0;
  ACTION_POLICY_SELF = 1;  // 获取的是自己的数据
  ACTION_POLICY_OTHER = 2; // 获取的是别人的数据 会触发额外检查
}

message GetUserFanListRequest {
  uint64 uid = 1 [ (buf.validate.field).uint64.gt = 0 ]; // 目标uid
  ActionPolicy policy = 2;
}

message GetUserFanListResponse {}

message GetUserFollowingListRequest {
  uint64 uid = 1 [ (buf.validate.field).uint64.gt = 0 ]; // 目标uid
  ActionPolicy policy = 2;
}

message GetUserFollowingListResponse {}

message RemoveUserFanRequest {
  uint64 uid = 1 [ (buf.validate.field).uint64.gt = 0 ]; // 目标uid
  repeated uint64 fans_id = 2; // 需要移除的粉丝id
  ActionPolicy policy = 3;
}

message RemoveUserFanResponse {}

message GetUserFanCountRequest {
  uint64 uid = 1 [ (buf.validate.field).uint64.gt = 0 ]; // 目标uid
}

message GetUserFanCountResponse {}

message GetUserFollowingCountRequest {
  uint64 uid = 1 [ (buf.validate.field).uint64.gt = 0 ]; // 目标uid
}

message GetUserFollowingCountResponse {}

message ShowSetting {
  bool show_followings = 1; // 是否公开关注列表
  bool show_fans = 2;       // 是否公开粉丝列表
}

message GetUserShowSettingRequest {
  uint64 uid = 1 [ (buf.validate.field).uint64.gt = 0 ]; // 目标uid
}

message GetUserShowSettingResponse { ShowSetting setting = 1; }

service RelationService {
  // 关注/取消关注某个用户
  rpc FollowUser(FollowUserRequest) returns (FollowUserResponse);
  // 获取某个用户的粉丝列表
  rpc GetUserFanList(GetUserFanListRequest) returns (GetUserFanListResponse);
  // 获取某个用户的关注列表
  rpc GetUserFollowingList(GetUserFollowingListRequest)
      returns (GetUserFollowingListResponse);
  // 移除某个用户的粉丝
  rpc RemoveUserFan(RemoveUserFanRequest) returns (RemoveUserFanResponse);
  // 获取用户的粉丝数量
  rpc GetUserFanCount(GetUserFanCountRequest) returns (GetUserFanCountResponse);
  // 获取用户的关注数量
  rpc GetUserFollowingCount(GetUserFollowingCountRequest)
      returns (GetUserFollowingCountResponse);
  // 获取用户的关注信息展示设置
  rpc GetUserShowSetting(GetUserShowSettingRequest)
      returns (GetUserShowSettingResponse);
}
